// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EducationField /> matches snapshot 1`] = `
<select
  class="sc-crzoUp fPuniV"
  id="educationField"
  name="name"
  type="text"
>
  <option
    disabled=""
    value="select"
  >
    wybierz 
  </option>
  <option
    value="none"
  >
    brak
  </option>
  <option
    value="primary"
  >
    podstawowe
  </option>
  <option
    value="vocational"
  >
    zawodowe
  </option>
  <option
    value="secondary"
  >
    średnie
  </option>
  <option
    value="higher"
  >
    wyższe licencjackie
  </option>
  <option
    value="masters"
  >
    wyższe magisterskie
  </option>
  <option
    value="phd"
  >
    wyższe doktorskie
  </option>
</select>
`;

exports[`<EducationField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <select
        class="sc-crzoUp cfXqdc"
        id="educationField"
        label="Test"
        name="name"
        required=""
        type="text"
      >
        <option
          disabled=""
          value="select"
        >
          wybierz *
        </option>
        <option
          value="none"
        >
          brak
        </option>
        <option
          value="primary"
        >
          podstawowe
        </option>
        <option
          value="vocational"
        >
          zawodowe
        </option>
        <option
          value="secondary"
        >
          średnie
        </option>
        <option
          value="higher"
        >
          wyższe licencjackie
        </option>
        <option
          value="masters"
        >
          wyższe magisterskie
        </option>
        <option
          value="phd"
        >
          wyższe doktorskie
        </option>
      </select>
      <span
        class="sc-kEqYlL lmrtkS"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<EducationField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="name"
      >
        Test
      </label>
      <select
        class="sc-crzoUp fPuniV"
        id="educationField"
        label="Test"
        name="name"
        type="text"
      >
        <option
          disabled=""
          value="select"
        >
          wybierz 
        </option>
        <option
          value="none"
        >
          brak
        </option>
        <option
          value="primary"
        >
          podstawowe
        </option>
        <option
          value="vocational"
        >
          zawodowe
        </option>
        <option
          value="secondary"
        >
          średnie
        </option>
        <option
          value="higher"
        >
          wyższe licencjackie
        </option>
        <option
          value="masters"
        >
          wyższe magisterskie
        </option>
        <option
          value="phd"
        >
          wyższe doktorskie
        </option>
      </select>
    </div>
  </form>
</div>
`;

exports[`<EducationField /> select field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <select
        class="sc-crzoUp cfXqdc"
        id="educationField"
        name="name"
        type="text"
      >
        <option
          disabled=""
          value="select"
        >
          wybierz 
        </option>
        <option
          value="none"
        >
          brak
        </option>
        <option
          value="primary"
        >
          podstawowe
        </option>
        <option
          value="vocational"
        >
          zawodowe
        </option>
        <option
          value="secondary"
        >
          średnie
        </option>
        <option
          value="higher"
        >
          wyższe licencjackie
        </option>
        <option
          value="masters"
        >
          wyższe magisterskie
        </option>
        <option
          value="phd"
        >
          wyższe doktorskie
        </option>
      </select>
      <span
        class="sc-kEqYlL lmrtkS"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;
